[gd_scene load_steps=5 format=3 uid="uid://dmvrvhmtv0d43"]

[ext_resource type="Script" path="res://Scenes/islands/volcano/volcano-dungeon/sinker/lava_sinker.gd" id="1_53bng"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jnbms"]
radius = 2.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_emwj2"]
height = 0.4
radius = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_jvapu"]
top_radius = 2.0
bottom_radius = 2.4

[node name="LavaSinker" type="AnimatableBody3D"]
sync_to_physics = false
script = ExtResource("1_53bng")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_jnbms")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("CylinderShape3D_emwj2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_jvapu")

[connection signal="body_entered" from="Area3D" to="." method="_on_player_standing"]
[connection signal="body_exited" from="Area3D" to="." method="_on_player_left"]
